# data_analysis_assistant

./: .gitignore  LICENSE  README.md  requirements.txt
NOVA/: model_config.txt
NOVA/answering_flow/: README.md
NOVA/answering_reports/: final_answer.md
NOVA/cleaned_datasets/: cleaned_data_one.csv
NOVA/csv_cleaning_flow/: pyproject.toml  report.md
NOVA/csv_cleaning_flow/src/csv_cleaning_flow/: main.py
NOVA/csv_cleaning_flow/src/csv_cleaning_flow/crews/a_data_processing_crew/: data_processing_crew.py
NOVA/csv_cleaning_flow/src/csv_cleaning_flow/crews/a_data_processing_crew/config/: agents.yaml  tasks.yaml
NOVA/csv_cleaning_flow/src/csv_cleaning_flow/crews/b_data_exploring_crew/: data_exploring_crew.py
NOVA/csv_cleaning_flow/src/csv_cleaning_flow/crews/b_data_exploring_crew/config/: agents.yaml  tasks.yaml
NOVA/csv_cleaning_flow/src/csv_cleaning_flow/crews/c_data_cleaning_crew/: data_cleaning_crew.py
NOVA/csv_cleaning_flow/src/csv_cleaning_flow/crews/c_data_cleaning_crew/config/: agents.yaml  tasks.yaml
NOVA/reports/: categorical_checks_report.md  categorical_checks_report_two.md  categorical_checks_table.csv  categorical_checks_table_two.csv  categorical_cleaning_plan.md  categorical_cleaning_report.md  data_profiling_report.md  integrity_checks_report.md  integrity_checks_report_two.md  integrity_checks_table.csv  integrity_checks_table_two.csv  integrity_cleaning_plan.md  integrity_cleaning_report.md  numerical_checks_report.md  numerical_checks_report_two.md  numerical_checks_table.csv  numerical_checks_table_two.csv  numerical_cleaning_plan.md  (+2 more)
(+6 files in other folders)
