[project]
name = "full_csv_analysis"
version = "0.1.0"
description = "full_csv_analysis using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0",
]

[project.scripts]
kickoff = "full_csv_analysis.main:kickoff"
run_crew = "full_csv_analysis.main:kickoff"
plot = "full_csv_analysis.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
